Lookup accounts by number and update docs
